修改链接代码

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
-					    <a href="work/memebox/html/index.html" class="hover-box" traget="_blank">
+					    <a href="work/memebox/html/index.html" class="hover-box" target="_blank">
 						<div class="img-box">
 							<img src="assets/meme box.png" alt="" class="img-responsive">
 						</div>
@@ -93,7 +93,7 @@
 						</a>
 					</div>
 					<div class="col-md-4">
-					    <a href="work/fjut/index.html" class="hover-box" traget="_blank">
+					    <a href="work/fjut/index.html" class="hover-box" target="_blank">
 						<div class="img-box">
 							<img src="assets/fjut.png" alt="" class="img-responsive">
 						</div>
@@ -110,7 +110,7 @@
 						</a>
 					</div>
 					<div class="col-md-4">
-				        <a href="work/gelios/html/home.html" class="hover-box" traget="_blank">
+				        <a href="work/gelios/html/home.html" class="hover-box" target="_blank">
 						<div class="img-box">
 							<img src="assets/galisa.png" alt="" class="img-responsive">
 						</div>
@@ -127,7 +127,7 @@
                         </a>
 					</div>
 					<div class="col-md-4">
-					    <a href="##" class="hover-box" title="在手机上" traget="_blank">
+					    <a href="##" class="hover-box" title="在手机上" target="_blank">
 						<div class="img-box">
 							<img src="assets/bysj.png" alt="" class="img-responsive">
 						</div>
@@ -144,7 +144,7 @@
 						</a>
 					</div>
 					<div class="col-md-4">
-					    <a href="work/hand/html/index.html" class="hover-box" traget="_blank">
+					    <a href="work/hand/html/index.html" class="hover-box" target="_blank">
 						<div class="img-box">
 							<img src="assets/shopweb.png" alt="" class="img-responsive">
 						</div>
