--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<!-- <link rel="stylesheet" href="libs/pagepiling.css"> -->
 	<link rel="stylesheet" href="libs/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/introduce.css">
+	<link rel="stylesheet" href="css/progress.css">
 	<script src="libs/jquery-1.12.3.js"></script>
 	<!-- <script src="libs/pagepiling.min.js"></script> -->
 	<script src="libs/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>
@@ -193,7 +194,14 @@
 			</div>
 		</div>
 	</div>
-	
+	<div id="nprogress">
+		<div class="bar" role="bar"></div>
+		<div class="spinner" role="spinner">
+			<div class="spinner-icon"></div>
+	</div>
+	</div>
+	<div class="mark"></div>
+	<script src="libs/progress.js"></script>
 	<script src="js/data.js"></script>
 	<script src="js/index.js"></script>
 	<script src="js/typing.js"></script>
