--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </a>
 					</div>
 					<div class="col-md-4">
-					    <a href="##" class="hover-box" title="在手机上" target="_blank">
+					    <a href="assets/app.jpg" class="hover-box" title="在手机上" target="_blank">
 						<div class="img-box">
 							<img src="assets/bysj.png" alt="" class="img-responsive">
 						</div>
