--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 	</div>
 	</div>
 	<div class="mark"></div>
+	<script src="js/jquery.easing.1.3.js"></script>
 	<script src="libs/progress.js"></script>
 	<script src="js/data.js"></script>
 	<script src="js/index.js"></script>
